<resources>
    <string name="app_name">Covid ABC</string>
    <string name="news_fragment_title">Notícias</string>
    <string name="quiz_fragment_title">Quiz</string>
    <string name="faq_fragment_title">Perguntas e Respostas</string>
    <string name="event_fragment_title">Eventos</string>
    <string name="quiz_intro">Descubra o quanto você sabe sobre o Covid-19</string>
    <string name="quiz_enter">Iniciar</string>
    <string name="event_description">Event Description</string>
    <string name="event_place">Event Place</string>
    <string name="event_type">Event Type</string>
    <string name="event_date">Event Date</string>
    <string name="create_event">Criar Evento</string>
    <string name="get_events_failure">Erro ao encontrar eventos</string>
    <string name="get_faq_failure">Erro ao encontrar perguntas e respostas</string>
    <string name="event_title_hint">Digite o nome do seu evento</string>
    <string name="event_place_hint">Digite o lugar do seu evento</string>
    <string name="event_description_hint">Descreva seu evento</string>
    <string name="date_button_text">Selecionar data</string>
    <string name="event_date_hint">Digite a data do evento</string>
    <string name="event_title">Event Title</string>
    <string name="title_activity_main_screen">MainActivity</string>
    <string name="title_home">Início</string>
    <string name="title_event">Eventos</string>
    <string name="title_faq">Perguntas frequentes</string>
    <string name="title_news">Notícias</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_login">Entrar</string>
    <string name="action_settings">Configurações</string>
    <string name="hint_email">Digite seu e-mail</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="text_login">Entrar</string>
    <string name="text_forgot_password">Esqueci minha senha</string>
    <string name="text_register_user">Registrar</string>
    <string name="text_email">E-mail</string>
    <string name="text_password">Senha</string>
    <string name="recover_password">Recupere sua senha</string>
    <string name="text_description_forgot_password">Digite o seu e-mail e enviaremos um link para voce recuperar sua senha</string>
    <string name="send_email">Enviar e-mail</string>
    <string name="text_register">Preencha seus dados para se registrar como brigadista</string>
    <string name="text_name">Nome</string>
    <string name="text_email_again">E-mail novamente</string>
    <string name="text_confirm_password">Senha novamente</string>
    <string name="fill_credentials">Por favor, preencha todos os campos</string>
    <string name="wrong_credentials">Usuário ou senha incorretos</string>
    <string name="verify_email">Por favor, verifique seu e-mail</string>
    <string name="thank_you_register">Obrigado por se registrar como brigadista!</string>
    <string name="an_error_occured">Um erro ocorreu!</string>
    <string name="check_your_email">Dê uma olhadinha no seu e-mail</string>
    <string name="required">Campo pendente</string>
    <string name="fill_in_fields">Por favor, preenchas os campos pendentes</string>
    <string name="covid_abc">Covid ABC</string>
    <string name="text_login_presentation">Entre como brigadista e nos ajude no combate à Covid-19 e às Fake News!</string>
    <string name="text_pin">Frase secreta</string>
    <string name="invalid_email">E-mail invalido</string>
    <string name="error_send_email">Este e-mail nao esta cadastrado</string>
    <string name="wrong_pin">Chave secreta errada</string>
    <string name="welcome">Bem-vindo, brigadista!</string>
    <string name="different_passwords">As senhas diferem</string>
    <string name="event_day">Day</string>
    <string name="event_month">Mon</string>
    <string name="text_create_event">Por favor, preencha os campos abaixo para compartilhar um evento!</string>
    <string name="text_create_event_button">Criar evento</string>
    <string name="no_event_date_selected">Data nao selecionada</string>
    <string name="text_pick_date">Escolher data</string>
    <string name="text_question">question here</string>
    <string name="text_true">Verdadeiro</string>
    <string name="text_false">Falso</string>
    <string name="next_question">Próxima pergunta</string>
    <string name="text_dialog_title">dialog title</string>
    <string name="text_dialog_message">dialog message</string>
    <string name="news_title">News Title</string>
    <string name="news_auxiliary_title">News Auxiliary Title</string>
    <string name="text_my_account">Espaço do brigadista</string>
    <string name="text_logout">Sair</string>
    <string name="sign_out">Você saiu com sucesso</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="text_source">fonte: abc</string>
    <string name="source">Fonte : %s</string>
    <string name="text_event_header">Dê uma olhada nos próximos eventos</string>
    <string name="create_event_sucess">Evento foi criado com sucesso</string>
    <string name="create_event_failure">Falha ao criar evento</string>
    <string name="API_KEY">AIzaSyAyp0Dq7djhTuFrBeyuioJW_ZxsvPfpn5k</string>
    <string name="create_event_escolher_localizacao">Escolher localização no mapa</string>
    <string name="digite_endereco">Digite o endereço</string>
    <string name="text_news_header">Fato ou Fake? Atualizamos diariamente notícias de diferentes fontes</string>
    <string name="text_progress">Progresso</string>
    <string name="right_answer">Você acertou</string>
    <string name="wrong_answer">Você errou</string>
    <string name="text_give_up">Desistir</string>
    <string name="text_next_question">Próxima questão</string>
    <string name="text_quit_quiz">Sair</string>
    <string name="text_restart_quiz">Reiniciar</string>
    <string name="text_score">score</string>
    <string name="text_wanna_quit">Quer mesmo sair?</string>
    <string name="text_continue">Continuar</string>
    <string name="text_quit">Sair</string>
    <string name="text_datetime">10/05 às 14h50</string>
    <string name="title_about">Sobre nós</string>
    <string name="welcome_name">Bem-vindo, %s!</string>
    <string name="description_secret_phrase">Informação sobre frase secreta</string>
    <string name="secret_phrase_explanation">A frase secreta permite que somente pessoas especificas se cadastem como brigadistas. Interessado? Entre em contato conosco</string>
    <string name="text_soon_new_features">Novas funcionalidades em breve!</string>
    <string name="title_delete">Deletar</string>
    <string name="title_edit">Editar</string>
    <string name="delete_sucess">Evento deletado com sucesso</string>
    <string name="maps_error">Endereço não encontrado, você pode usar mesmo assim.</string>
    <string name="delete_failure">Não foi possível deletar o evento</string>
    <string name="text_edit">Editar</string>
    <string name="edit_event_sucess">Evento editado com sucesso</string>
    <string name="edit_event_failure">Falha ao editar evento</string>
    <string name="text_unfilled_map">"Voce nao preencheu a localização "</string>
    <string name="text_fill">Preencher</string>
    <string name="text_save">Salvar</string>
    <string name="the_address_is">O preenchido é: \"%s\"</string>
    <string name="text_the_selected_address">O endereço selecionado é</string>
    <string name="title_menu_login">Entrar como brigadista</string>
    <string name="title_feedback">Sugestões</string>
    <string name="text_feedback">Sugestões do usuário</string>
    <string name="text_feedback_description">"Sua opinião é muito valiosa para nós. Ajude-nos a melhorar o aplicativo através de críticas ou sugestões :)"</string>
    <string name="text_send">Enviar</string>
    <string name="send_feedback_failure">Erro ao enviar sugestão</string>
    <string name="send_feedback_sucess">Sugestão enviada com sucesso</string>
    <string name="weak_pswd_error">A senha precisa ter no mínimo 6 caracteres</string>
    <string name="collision_email_error">Este email já está em uso</string>
    <string name="confirm_event_delete">Tem certeza que deseja apagar este evento?</string>
    <string name="text_aviso">Aviso</string>
    <string name="confirm_sim">Sim</string>
    <string name="confirm_não">Não</string>
    <string name="text_event_header_empty">Sem eventos no momento, mas nossos brigadistas irão atualizar em breve</string>
    <string name="text_news_version">Uma versão nova está disponível, com novas funcionalidades e correções de erros. Não esqueça de atualizar :) </string>
    <string name="text_ok">OK</string>
    <string name="text_inventory_management">Gestão de estoque</string>
    <string name="text_add_inventory_location">Adicionar Local de Estoque</string>
    <string name="text_default">a simple text</string>
    <string name="text_create_location">Digite o nome do novo local</string>
    <string name="main_text_inventory_management">Locais de armazenamento ja existentes</string>
    <string name="welcome_to">Voce esta vendo estoque do(a) %s</string>
    <string name="number_default">5</string>
    <string name="text_change_count">Adicionar ou remover unidades</string>
    <string name="change_sucess">Mudanças realizadas com sucesso</string>
    <string name="change_failure">Houve algum erro. Tente novamente</string>
    <string name="item_is">Item: %s</string>
    <string name="item_count_is">Quantidade atual : %d</string>
    <string name="confirm_location_delete">Tem certeza que deseja apagar este local?</string>
    <string name="item_kit_count_is">Temos %d kits disponiveis!!</string>
    <string name="forms_enter">Colaborar</string>
    <string name="forms_intro">Colabore em um questionário voluntário e anônimo para um projeto de pesquisa</string>
    <string name="exit_forms">Sair</string>
    <string name="forms_url">https://docs.google.com/forms/d/e/1FAIpQLSeytTsPL2QSB0cJqvoLHokb1rXDcUvKeuJVqh6PVVQcP0-Jfg/viewform</string>
    <string name="answer_sucess">Obrigado por responder o fomulario</string>
    <string name="answer_error">Aconteceu algum erro :( Por favor tente novamente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_fake_checker">Detector de Fake News</string>
    <string name="text_fake_checker_description">Copie o texto de uma notícia, cole na caixa abaixo e clique em "Enviar". Classificaremos a notiícia como possivelmente verdadeira ou falsa.</string>
    <string name="text_fake_checker_source"> Esse classificador foi desenvolvido por alunos e professores da Universidade de São Paulo </string>
    <string name="text_fake_checker_source_link"> <u> Clique aqui para saber mais! </u></string>
    <string name="title_fake_checker">Detector de Fake News</string>
    <string name="small_text_error">Ocorreu um erro. O texto deve ter pelo menos 100 palavras.</string>
    <string name="text_true_news">Essa notícia parece ser verdadeira! Busque fontes confiáveis antes de divulgá-la.</string>
    <string name="text_fake_news">Essa notícia pode ser falsa. Busque fontes confiáveis.</string>
</resources>