<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_quiz"
        android:icon="@drawable/ic_quiz"
        android:title="@string/title_quiz" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_event"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_faq"
        android:icon="@drawable/ic_faq"
        android:title="@string/title_faq" />

</menu>