<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"

    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/item_name_text_view"
        android:text="@string/item_is"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/general_space"
        app:fontFamily="sans-serif-light"
        android:textSize="@dimen/text_default_size"
        android:textColor="@color/color1_saphire_blue"
        android:textAllCaps="false"
        android:gravity="center"
        android:padding="@dimen/general_space">
    </TextView>

    <TextView
        android:id="@+id/item_curr_count_message"
        android:text="@string/item_count_is"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/general_space"
        app:fontFamily="sans-serif-light"
        android:textSize="@dimen/text_default_size"
        android:textColor="@color/color1_saphire_blue"
        android:textAllCaps="false"
        android:gravity="center"
        android:padding="@dimen/general_space"
        android:layout_below="@id/item_name_text_view">
    </TextView>

    <TextView
        android:id="@+id/change_count_message"
        android:text="@string/text_change_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/general_space"
        app:fontFamily="sans-serif-light"
        android:textSize="@dimen/text_default_size"
        android:textColor="@color/color1_saphire_blue"
        android:textAllCaps="false"
        android:gravity="center"
        android:padding="@dimen/general_space"
        android:layout_below="@id/item_curr_count_message">
    </TextView>

    <LinearLayout
        android:id="@+id/change_count_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_count_message"
        android:orientation="horizontal"
        android:gravity="center">

        <NumberPicker
            android:id="@+id/item_count_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/change_count_buttons">

        <Button
            android:id="@+id/continue_change_count_button"
            android:text="@string/text_save"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_space"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_default_size"
            android:gravity="center"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/quit_change_count_button"
            android:text="@string/text_quit"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/general_space"
            android:background="@android:color/transparent"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_default_size"
            android:gravity="center"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</RelativeLayout>
