<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/big_space"
    android:background="@drawable/login_gradient"
    tools:context=".login.ForgotPasswordActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/fake_checker_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:text="@string/text_fake_checker"
        android:textSize="@dimen/text_big_size"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/fake_checker_desc"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:paddingTop="@dimen/default_space"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif-light"
        android:text="@string/text_fake_checker_description"
        android:textSize="@dimen/text_default_size"
        android:lineSpacingExtra="@dimen/very_little_space"
        android:layout_below="@id/fake_checker_header"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/fake_checker_source"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:paddingTop="@dimen/default_space"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif-light"
        android:text="@string/text_fake_checker_source"
        android:textSize="@dimen/text_default_size"
        android:lineSpacingExtra="@dimen/very_little_space"
        android:layout_below="@id/fake_checker_desc"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/fake_checker_source_link"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:paddingTop="@dimen/default_space"
        android:layout_height="wrap_content"
        app:fontFamily="sans-serif-light"
        android:text="@string/text_fake_checker_source_link"
        android:textSize="@dimen/text_default_size"
        android:lineSpacingExtra="@dimen/very_little_space"
        android:layout_below="@id/fake_checker_source"
        android:textColor="@android:color/white"
        android:gravity="center_horizontal" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:paddingTop="@dimen/default_space"
        android:layout_below="@id/fake_checker_source_link"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fake_checker_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/edit_text_normal"
            android:layout_marginVertical="@dimen/default_space"
            android:padding="@dimen/general_space"
            android:lineSpacingExtra="@dimen/very_little_space"
            android:layout_weight="1"
            app:fontFamily="sans-serif-light"
            android:textColor="@color/color1_saphire_blue"
            android:layout_gravity="fill_vertical"
            android:textSize="@dimen/text_default_size"
            android:inputType="textMultiLine"
            android:gravity="top"/>
        <Button
            android:id="@+id/fake_check_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_space"
            android:padding="@dimen/default_space"
            android:textColor="@android:color/white"
            android:text="@string/text_send"
            android:gravity="center_horizontal|center_vertical"
            android:background="@drawable/button_shape"/>
    </LinearLayout>

</RelativeLayout>
